@@ -269,6 +269,7 @@
         <dependency>
             <groupId>javax.xml.bind</groupId>
             <artifactId>jaxb-api</artifactId>
+            <version>1.0</version>
         </dependency>
         <dependency>
             <groupId>com.sun.xml.bind</groupId>
