@@ -1,15 +1,0 @@
-log4j.rootLogger=WARN, stdout, logfile
-log4j.logger.org.springframework.oxm=DEBUG
-log4j.logger.org.springframework.ws=DEBUG
-log4j.logger.org.springframework.xml=DEBUG
-
-log4j.appender.stdout=org.apache.log4j.ConsoleAppender
-log4j.appender.stdout.layout=org.apache.log4j.PatternLayout
-log4j.appender.stdout.layout.ConversionPattern=%d %p [%c] - %m%n
-
-log4j.appender.logfile=org.apache.log4j.RollingFileAppender
-log4j.appender.logfile.File=${airline.root}/WEB-INF/airline.log
-log4j.appender.logfile.MaxFileSize=512KB
-log4j.appender.logfile.MaxBackupIndex=3
-log4j.appender.logfile.layout=org.apache.log4j.PatternLayout
-log4j.appender.logfile.layout.ConversionPattern=%d %p [%c] - %m%n
